--- a/Builds/MacOSX/SynthVST.xcodeproj/xcshareddata/xcschemes/SynthVST - All.xcscheme
+++ b/Builds/MacOSX/SynthVST.xcodeproj/xcshareddata/xcschemes/SynthVST - All.xcscheme
@@ -40,10 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <PathRunnable
-         runnableDebuggingMode = "0"
-         FilePath = "/Users/nickverbeek/Downloads/JUCE/extras/AudioPluginHost/Builds/MacOSX/build/Debug/AudioPluginHost.app">
-      </PathRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF7D025075BE6121770CF588"
+            BuildableName = "SynthVST.app"
+            BlueprintName = "SynthVST - Standalone Plugin"
+            ReferencedContainer = "container:SynthVST.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
