Attack can be changed with the attack slider. Successfully implemented Audio Parameters

--- a/Builds/MacOSX/SynthVST.xcodeproj/xcshareddata/xcschemes/SynthVST - All.xcscheme
+++ b/Builds/MacOSX/SynthVST.xcodeproj/xcshareddata/xcschemes/SynthVST - All.xcscheme
@@ -40,16 +40,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DF7D025075BE6121770CF588"
-            BuildableName = "SynthVST.app"
-            BlueprintName = "SynthVST - Standalone Plugin"
-            ReferencedContainer = "container:SynthVST.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
+      <PathRunnable
+         runnableDebuggingMode = "0"
+         FilePath = "/Users/nickverbeek/Downloads/JUCE/extras/AudioPluginHost/Builds/MacOSX/build/Debug/AudioPluginHost.app">
+      </PathRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
